--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --primary-color: #0366d6;
   --secondary-color: #24292e;
   --accent-color: #17b978;
@@ -67,4 +67,4 @@ h1, h2 {
 .btn-accent:hover {
   background-color: #149e6e;
   border-color: #149e6e;
-}
+} */
