--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -45,9 +45,11 @@
 }
 
 #forum-menu-button {
-  background-color: rgba(3, 60, 59, 0.9);
+  background-color: rgba(6, 144, 142, 0.9);
   cursor: pointer;
   z-index: 10000;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .sidebar-buttons-container {
@@ -59,10 +61,12 @@
   transition: width 0.3s;
   right: -100px;
   z-index: 10000;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .sidebar-buttons-container.sidebar-visible {
-  width: 100px;
+  width: 60px;
   z-index: 10000;
 }
 
@@ -80,6 +84,19 @@
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+.sidebar-icon {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.arrow-icon {
+  width: 30px;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 @media (max-width: 992px) {
   .home-page-container .mt-4 {
     margin-bottom: 1rem !important;
@@ -90,7 +107,7 @@
   }
 
   .sidebar-buttons-container.sidebar-visible {
-    width: 100px;
+    width: 60px;
   }
 
   .sidebar-item {
