--- a/src/AboutMePage.css
+++ b/src/AboutMePage.css
@@ -18,9 +18,29 @@
   max-width: 900px;
 }
 
+.profile-image {
+  margin-top: 35px;
+  border-radius: 10px;
+}
+
 .about-me-inner-container h2 {
   margin-top: 2rem;
   text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #5c6bc0;
+  border-top: 3px solid #5c6bc0;
+  padding-top: 1.5rem;
+}
+
+.about-me-inner-container h3 {
+  margin-top: 1.5rem;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #5c6bc0;
+  border-top: 3px solid #5c6bc0;
+  padding-top: 1.5rem;
 }
 
 .about-me-inner-container p {
@@ -28,6 +48,50 @@
   margin-right: 1rem;
   margin-bottom: 5rem;
   font-size: 1.2rem;
+}
+
+.tech-skills-category h4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #5c6bc0;
+  background-color: rgba(92, 107, 192, 0.2);
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+
+.tech-skills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.tech-skill {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.5rem;
+  width: calc(100% / 6 - 1rem);
+}
+
+.tech-skill-icon {
+  font-size: 4rem;
+  margin-bottom: 0.5rem;
+  transition: transform 0.2s;
+}
+
+.tech-skill-icon:hover {
+  transform: translateY(-5px) rotate(10deg);
+}
+
+.github-contributions {
+  display: block;
+  margin: 0 auto;
+  max-width: 80%;
+  margin-bottom: 1rem;
 }
 
 @media (max-width: 768px) {
