--- a/src/AboutMePage.css
+++ b/src/AboutMePage.css
@@ -1,29 +1,9 @@
-.about-me-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: transparent;
-  padding: 1rem;
-}
-
-.about-me-inner-container {
-  background-color: rgba(255, 255, 255, 0.9);
-  padding-top: 2rem;
-  padding-bottom: 3rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  border-radius: 10px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-  width: 90%;
-  max-width: 900px;
-}
-
 .profile-image {
   margin-top: 35px;
   border-radius: 10px;
 }
 
-.about-me-inner-container h2 {
+.page-inner-container h2 {
   margin-top: 2rem;
   text-align: center;
   font-size: 2rem;
@@ -33,7 +13,7 @@
   padding-top: 1.5rem;
 }
 
-.about-me-inner-container h3 {
+.page-inner-container h3 {
   margin-top: 1.5rem;
   text-align: center;
   font-size: 2rem;
@@ -43,7 +23,7 @@
   padding-top: 1.5rem;
 }
 
-.about-me-inner-container p {
+.page-inner-container p {
   margin-left: 1rem;
   margin-right: 1rem;
   margin-bottom: 5rem;
