--- a/src/PortfolioPage.css
+++ b/src/PortfolioPage.css
@@ -1,18 +1,7 @@
-.portfolio-container {
-  background: transparent;
-}
-
-.portfolio-inner-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding-bottom: 1rem;
-  background-color: rgba(255, 255, 255, 0.9) !important;
-}
-
 .portfolio-card {
   transition: transform 0.3s;
-  background-color: transparent !important;
+  padding: 20px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.06);
 }
 
 .portfolio-card:hover {
